# Mini-C

./: .gitignore  README.md  description.md  dune  dune-project  libminic.opam  minic.ml  minic.opam  minic_lexer.mll  minic_parser.mly  minic_typechecker.ml
include/: malloc.h  stdbool.h  stddef.h  stdio.h  stdlib.h  string.h
lib/: compile_args.ml  compiler.ml  dune  llir.ml  minic.ml  minic_ast.ml  minic_display.ml  minic_interpreter.ml  minic_lexer.mll  minic_llir.ml  minic_parser.mly  minic_typechecker.ml  minic_wasm.ml  preprocessor.mll  wasm.ml
runtime/: gc_memory.mts  memory.mts  runtime.mts  test_runtime.mts
test/: 00_instr_expr.c  00_instr_expr.mnc  01_cst_false.c  01_cst_false.mnc  02_instr_set.mnc  03_expr_add.mnc  04_expr_mul.mnc  05_fundef_params.c  07_expr_call.c  08_typ_void.c  09_global_variables.c  10_typ_bool.c  10_typ_bool.mnc  11_local_variables.c  11_local_variables.mnc  12_expr_lt.c  13_instr_if.c  13_instr_if.mnc  14_instr_while.c  14_instr_while.mnc  15_instr_putchar.mnc  16_expr_div.c  16_expr_div.mnc  17_expr_sub.mnc  18_expr_eq_neq.c  18_expr_eq_neq.mnc  19_expr_leq.mnc  1_cst_false.mnc  20_expr_gt_geq.c  20_expr_gt_geq.mnc  21_expr_and_or.c  21_expr_and_or.mnc  22_misc_comments.mnc  23_expr_unary_minus.c  23_expr_unary_minus.mnc  24_expr_not.c  24_expr_not.mnc  26_expr_shift.c  27_expr_mod.c  27_expr_mod.mnc  (+34 more)
test/display/: display.ml  dune  fact.mnc  fizzbuzz.mnc  for.mnc  halfabet.mnc  minus.mnc
test/interpreter/: binary.mnc  dune  halfabet.mnc  interpreter.expected  interpreter.ml
test/typechecker/: 04_expr_mul.mnc  12_expr_lt.mnc  25_expr_bitwise.mnc  29_instr_for.mnc  31_misc_global_arrays.mnc  32_misc_local_arrays.mnc  typechecker.ml
