(ocamllex
 (modules minic_lexer))

(menhir
 (flags --explain --dump)
 (modules minic_parser))

(ocamllex
 (modules preprocessor))

(library
 (name libminic)
 (modules
  preprocessor
  minic_lexer
  minic_parser
  minic_ast
  minic_typechecker
  llir
  minic
  wasm
  minic_llir
  minic_wasm
  compile_args
  compiler))
