(executable
 (name display)
 (libraries libminic))

(rule
 (deps
  (source_tree %{workspace_root}))
 (action
  (with-stdout-to
   display.expected
   (run ./display.exe step1))))

(rule
 (deps
  (file ./display.expected))
 (action
  (with-stdout-to
   display.output
   (run ./display.exe step2))))

(rule
 (alias runtest)
 (action
  (diff display.expected display.output)))
